--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ a {
 
 .main-container{
     padding-top: 10px;
+    padding-bottom: 70px;
 }
 
 .main-text {
@@ -49,9 +50,10 @@ a {
 .main-list{
     padding: 10px;
 
-    border-radius: 5px;
+    border-radius: 10px;
         background-color: #575151;
-}
+        box-shadow: 3px 3px 0px -2px rgba(0, 0, 0, 0.77);
+       }
 
 .main-item {
   padding: 5px;
