--- a/css/style.css
+++ b/css/style.css
@@ -262,3 +262,12 @@ background-color: #575151;
 .question-page .main-link{
   font-size: 12px;
 }
+
+/* STYLES OF LEARN-BG  */
+.bg-page .main-item:nth-child(4){
+      background-color: #3bcb3b;
+}
+
+.bg-page .bg-number{
+      background-color: #0f9d0f;
+}
